fix fav icon update; rename

--- a/extension/list.html
+++ b/extension/list.html
@@ -1,6 +1,6 @@
 <head>
     <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-v1.png">
-    <title>Simple Twitch UI</title>
+    <title>Twitch Watcher</title>
     <script src="js/lib/awesomplete.min.js"></script>
 
     <script type="module" src="js/list/list.js"></script>
