--- a/extension/player.html
+++ b/extension/player.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/player.css">
-    <script src="js/lib/hls.js"></script>
+    <script src="js/lib/hls-1.0-b2.js"></script>
     <script src="js/lib/reconnecting-websocket.js"></script>
     <script type="module" src="js/player/entry.js"></script>
 </head>
